# check_version

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  args.c  args.h  common.h  configure.ac  main.c  version.c  version.h  version.sh
.github/workflows/: main.yml
src/: Makefile.am  args.c  main.c  test_check_version.c  version.h
tests/: Makefile  main_test.c
